--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "connect-mongo": "^5.1.0",
     "connect-pg-simple": "^10.0.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.3.0",
@@ -63,6 +64,7 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
+    "mongodb": "^6.15.0",
     "mongoose": "^8.13.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
